--- a/deckeditor.ui
+++ b/deckeditor.ui
@@ -606,12 +606,12 @@ Example: flying haste, flying first strike</string>
             <string>Card List</string>
            </property>
            <property name="buddy">
-            <cstring>cardfilter</cstring>
+            <cstring>cardFilter</cstring>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="cardfilter">
+          <widget class="QLineEdit" name="cardFilter">
            <property name="maximumSize">
             <size>
              <width>240</width>
@@ -811,6 +811,9 @@ Example: flying haste, flying first strike</string>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="acceptDrops">
+            <bool>true</bool>
+           </property>
            <property name="dragDropMode">
             <enum>QAbstractItemView::DragDrop</enum>
            </property>
@@ -855,6 +858,9 @@ Example: flying haste, flying first strike</string>
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
+           </property>
+           <property name="acceptDrops">
+            <bool>true</bool>
            </property>
            <property name="dragDropMode">
             <enum>QAbstractItemView::DragDrop</enum>
@@ -964,7 +970,7 @@ p, li { white-space: pre-wrap; }
   <tabstop>chkSplit</tabstop>
   <tabstop>btnSearch</tabstop>
   <tabstop>btnClear</tabstop>
-  <tabstop>cardfilter</tabstop>
+  <tabstop>cardFilter</tabstop>
   <tabstop>cardList</tabstop>
   <tabstop>btnComment</tabstop>
   <tabstop>btnAdd</tabstop>
